Fixes fonts loading

--- a/resources/styles/fonts/_neon.scss
+++ b/resources/styles/fonts/_neon.scss
@@ -1,5 +1,5 @@
 @font-face {
   font-family: "Neon";
-  src: url("../../../public/fonts/NEON____.otf") format("otf"),
-          url("../../../public/fonts/NEON____.woff2") format("woff2");
+  src: url("/public/fonts/NEON____.otf") format("otf"),
+          url("/public/fonts/NEON____.woff2") format("woff2");
 }
