--- a/resources/styles/fonts/_zenDot.scss
+++ b/resources/styles/fonts/_zenDot.scss
@@ -1,5 +1,5 @@
 @font-face {
   font-family: "Test Dots";
-  src: url("../../../public/fonts/ZenDot.woff2") format("woff2"),
-       url("../../../public/fonts/ZenDot.otf") format("otf")
+  src: url("/public/fonts/ZenDot.woff2") format("woff2"),
+       url("/public/fonts/ZenDot.otf") format("otf")
 }
