Adds kanit fonts

--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -6,6 +6,7 @@
 @import 'animate.css';
 @import "./fonts/zenDot";
 @import "./fonts/neon";
+@import "./fonts/kanit";
 
 @import "./css_variables";
 
