--- a/resources/styles/admin.scss
+++ b/resources/styles/admin.scss
@@ -64,15 +64,41 @@ $enable-responsive-font-sizes: true;
   }
 }
 
+.form-control::file-selector-button {
+  color: var(--bs-body-color);
+}
+
 .loading-overlay{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0,0.5);
-    z-index: 9999;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  position:        fixed;
+  top:             0;
+  left:            0;
+  width:           100%;
+  height:          100%;
+  background:      rgba(0, 0, 0, 0.5);
+  z-index:         9999;
+  display:         flex;
+  align-items:     center;
+  justify-content: center;
+}
+
+.qrcode-frame {
+  border:         1px solid var(--bs-primary);
+  padding-bottom: 1rem;
+  display:        inline-flex;
+  position:       relative;
+  flex-direction: column;
+  gap:            1rem;
+  max-width:      40%;
+  
+  > svg {
+    width:  100%;
+    height: auto;
+  }
+  
+  .qrcode-label {
+    gap:          1rem;
+    display:      flex;
+    margin-left:  1rem;
+    margin-right: 1rem;
+  }
 }
