--- a/resources/styles/themes/_light.scss
+++ b/resources/styles/themes/_light.scss
@@ -13,6 +13,10 @@
   // logo variables
   --logo-text: #{variables.$dark};
   --logo-accent: #{variables.$primary};
+  
+  // square contact icon
+  --icon-color:          #{variables.$dark};
+  --icon-bg-color:       #{variables.$primary};
 
   .navbar {
     --bs-navbar-bg: var(--bs-light);
