--- a/resources/styles/partials/_footer.scss
+++ b/resources/styles/partials/_footer.scss
@@ -43,11 +43,12 @@ footer {
 
 
   .lang-logo {
-    max-width: 45px;
+    max-width: 38px;
     // height: 50px;
     // font-size: 100px;
     display: flex;
     align-items: center;
+    margin-right: .5rem;
 
     // @include media-breakpoint-down(lg) {
     //   width: 100px;
