--- a/resources/styles/partials/_utility.scss
+++ b/resources/styles/partials/_utility.scss
@@ -36,3 +36,17 @@
     }
   }
 }
+
+
+.rotate-90 {
+  transform: rotate(90deg);
+}
+
+.rotate-270 {
+  transform: rotate(270deg);
+}
+
+.txt-img {
+  display: flex;
+  align-items: center;
+}
