Adds language to mobile drawer

--- a/resources/styles/partials/_navlink.scss
+++ b/resources/styles/partials/_navlink.scss
@@ -305,8 +305,12 @@
     &[data-bs-toggle="collapse"] {
       &:not(.collapsed),
       &:hover {
-        .icon {
+        .icon:not([data-active-direction="up"]) {
           rotate: 45deg;
+        }
+        
+        .icon[data-active-direction="up"] {
+          rotate: -45deg;
         }
       }
     }
