--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -37,6 +37,7 @@ $enable-responsive-font-sizes: true;
 @import "./partials/diagonalAccordion";
 @import "./partials/sections";
 @import "./partials/neonGraphic";
+@import "./partials/settings_fab";
 @import "./partials/about-us";
 @import "./chisiamo";
 @import "./servizi";
