Hide settingsFab on footer

--- a/resources/styles/partials/_settings_fab.scss
+++ b/resources/styles/partials/_settings_fab.scss
@@ -3,6 +3,7 @@
   bottom:   1rem;
   left:     1rem;
   z-index:  1000;
+  transition: opacity .2s ease;
   
   .dropdown-menu {
     transform: translateX(-100%) !important;
