maked 2 vcard variation

--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -41,6 +41,7 @@ $enable-responsive-font-sizes: true;
 @import "./partials/about-us";
 @import "./chisiamo";
 @import "./servizi";
+@import "./vcards.scss";
 
 
 .iubenda-embed.iubenda-nostyle {
