fixes fab buttons

--- a/resources/styles/partials/_settings_fab.scss
+++ b/resources/styles/partials/_settings_fab.scss
@@ -1,9 +1,12 @@
-.settings-fab-container {
-  position: fixed;
-  bottom:   1rem;
-  left:     1rem;
-  z-index:  1000;
-  transition: opacity .2s ease;
+.fab-container {
+  position:       fixed;
+  bottom:         1rem;
+  left:           1rem;
+  z-index:        1000;
+  transition:     opacity .2s ease;
+  display:        flex;
+  flex-direction: column;
+  row-gap: 1rem;
   
   .dropdown-menu {
     transform: translateX(-100%) !important;
@@ -15,12 +18,28 @@
   }
   
   .btn {
-    --icon-rotation: 0deg;
-    --icon-hover-rotation: 0deg;
+    --icon-rotation:         0deg;
+    --icon-hover-rotation:   0deg;
     --icon-active-transform: translate(0, 0);
     
-    width:  60px;
-    height: 60px;
+    width:                   60px;
+    height:                  60px;
+  }
+  
+  // add this to align items on the right
+  &.fab-container-right {
+    left:  auto;
+    right: 1rem;
+    
+    .dropdown-menu {
+      transform: translateX(100%) !important;
+      bottom:    100% !important;
+      right:     0;
+      
+      &.show {
+        transform: translateX(0) !important;
+      }
+    }
   }
 }
 
